--- a/Standard/OMG_OntoIOp_current.tex
+++ b/Standard/OMG_OntoIOp_current.tex
@@ -6433,19 +6433,17 @@ We additionally need to axiomatize a number of predicates in Common Logic
          (exists (pt) 
              (and (form:in-sequence s pt)
                   (form:in-position pt x)) )))
-
-
 \end{lstlisting}
 
 Using this infrastructure, we obtain an institution for UML class
-diagrams as follows:\ednote{AK: Added the following up to the next ed-note.}
+diagrams as follows:
 
-\medskip\noindent\textbf{Classifier hierarchies.}
-A \emph{classifier hierarchy} $(C, {\leq_C})$ is given by a partial
-order where the set $C$ contains the \emph{classifier names}, which are
-closed w.r.t.\ the \emph{built-in types} $\mathsf{Boolean}$,
-$\mathsf{UnlimitedNatural}$, $\mathsf{Integer}$, $\mathsf{Real}$, and
-$\mathsf{String}$, i.e.,
+\medskip\noindent\textbf{Class/data type hierarchies.}
+A \emph{class/data type hierarchy} $(C, {\leq_C})$ is given by a
+partial order where the set $C$ contains the \emph{class/data type
+  names}, which are closed w.r.t.\ the \emph{built-in data types}
+$\mathsf{Boolean}$, $\mathsf{UnlimitedNatural}$, $\mathsf{Integer}$,
+$\mathsf{Real}$, and $\mathsf{String}$, i.e.,
 $\{ \mathsf{Boolean}, \mathsf{UnlimitedNatural}, \mathsf{Integer},
 \mathsf{Real}, \mathsf{String} \} \subseteq C$;\ednote{what about
 enumeration types? Should we assume that some classifiers are
@@ -6453,22 +6451,23 @@ marked as enumeration types and equipped with their set of
 constants?}
 and the partial ordering relation $\leq_C$ represents a
 \emph{generalisation relation} on $C$, where we say that $c_1$ is a
-\emph{sub-classifier} of $c_2$ if $c_1 \leq_C c_2$.
+\emph{sub-class/data type} of $c_2$ if $c_1 \leq_C c_2$.
 
-A \emph{classifier hierarchy map}
+A \emph{class/data type hierarchy map}
 $\gamma : (C, {\leq_C}) \to (D, {\leq_D})$ is given by a monotone map
 from $(C, {\leq_C})$ to $(D, {\leq_D})$, i.e.,
 $\gamma(c) \leq_D \gamma(c')$ if $c \leq_C c'$, such that
-$\gamma(c) = c$ for all built-in types
-$c \in \{ \mathsf{Boolean},\allowbreak \mathsf{UnlimitedNatural},\allowbreak
+$\gamma(c) = c$ for all
+$c \in \{ \mathsf{Boolean}, \mathsf{UnlimitedNatural},\allowbreak
 \mathsf{Integer}, \mathsf{Real}, \mathsf{String} \}$.
 
-For each classifier $c \in C$ of a classifier hierarchy $(C, {\leq_C})$
-we use the \emph{classifier annotations} $\mathsf{OrderedSet}$,
-$\mathsf{Set}$, $\mathsf{Sequence}$, and $\mathsf{Bag}$ representing the
-meta-properties ``ordered'' and ``unique'' according to the following
-table:
-
+\medskip
+We use the \emph{collection type constructors} $\mathsf{OrderedSet}$,
+$\mathsf{Set}$, $\mathsf{Sequence}$, and $\mathsf{Bag}$ for
+representing the meta-attributes ``ordered'' and ``unique'' of
+\uml{MultiplicityElement} according to the following
+table:\footnote{Cf.~UML Superstructure Specification 2.4.1, p.~128.}
+%
 \begin{quotation}
 \begin{tabular}{@{}r||c|c@{}}
              & ordered               & not ordered\\
@@ -6478,132 +6477,202 @@ table:
   not unique & $\mathsf{Sequence}$   & $\mathsf{Bag}$
 \end{tabular}
 \end{quotation}
+%
+The default is ``not ordered'' and ``unique''.\footnote{UML
+  Superstructure Specification 2.4.1, p.~96.}
 
-We write $\tau[c]$ for an annotated classifier for
+For a class/data type $c \in C$ of a class/data type-hierarchy
+$(C, {\leq_C})$ and a collection type constructor
 $\tau \in \{ \mathsf{OrderedSet}, \mathsf{Set}, \mathsf{Sequence},
-\mathsf{Bag} \}$.
-The default is ``not ordered'' and ``unique'' (UML Superstructure
-Specification 2.4.1, p.~96).
+\mathsf{Bag} \}$,
+we write $\tau[c]$ for the induced \emph{collection type}.
 
-
-\medskip\noindent\textbf{Classifier nets (Signatures).}
-A \emph{classifier net} $\Sigma = ((C, {\leq_C}), K, P, M, A)$
-comprises
+\medskip
+Let $(C, {\leq_C})$ be a class/data type hierarchy.
 %
 \begin{itemize}[label={--}, leftmargin=*]
-  \item a \emph{classifier hierarchy} $(C, {\leq_C})$;
+  \item An \emph{attribute declaration} over $(C, {\leq_C})$ is of the
+form $c.p : \tau[c']$ with $c, c' \in C$, $\tau$ a collection type
+constructor, and $p$ an \emph{attribute name}.
 
-  \item a set $K$ of \emph{instance specifications declarations} of
-the form $k : c$ with $k$ an \emph{instance specification name} and $c
-\in C$;
+  \item An \emph{association declaration} over $(C, {\leq_C})$ is of the
+form $a(p_1 : \tau_1[c_1], \dots, p_r : \tau_n[c_r])$ with $r \geq 2$,
+$c_1, \dots, c_r \in C$, $\tau_1, \ldots, \tau_r$ classifier
+annotations, $a$ an \emph{association name}, and $p_1, \dots, p_r$
+\emph{member end names}.\footnote{The member ends are ordered according
+  to the UML Superstructure Specification 2.4.1, p.~29; hence we use a
+  tuple-like notation.}  An association declaration
+$\mathbf{a} = a(p_1 : \tau_1[c_1], \ldots, p_r : \tau_r[c_r])$
+\emph{yields} the \emph{property declarations}
+$\mathbf{a}.p_i : \tau_i[c_i]$ for $1 \leq i \leq r$.  An association
+declaration is \emph{binary} if $r = 2$.\footnote{Only binary
+  association may show member ends that are properties not owned by the
+  association (UML Superstructure Specification 2.4.1, p.~37).}
 
-  \item a set $P$ of \emph{property declarations} of the form
-$c.p : \tau[c']$ with $c, c' \in C$, $\tau$ a classifier annotation, and
-$p$ a \emph{property name};
-
-  \item a set $M$ of \emph{composition declarations} of the form
-$c\composition r : \tau[c']$ with $c, c' \in C$, $\tau$ a classifier
-annotation, and $r$ a \emph{composition role name};
-
-  \item and a set $A$ of \emph{association declarations} of the form
-$a\{ r_1 : c_1, \dots, r_n : c_n \}$ with $n \geq 2$,
-$c_1, \dots, c_n \in C$, $a$ an \emph{association name}, and $r_1, \dots, r_n$
-\emph{association role names},
+  \item A \emph{composition declaration} over $(C, {\leq_C})$ is of the
+form $m(p_1 : \mathsf{Set}[c_1], \composition p_2 : \tau_2[c_2])$ with
+$c_1, c_2 \in C$, $\tau_2$ a collection type constructor, $m$ a
+\emph{composition name}, and $p_1, p_2$ \emph{member end
+  names}.\footnote{In UML, each \uml{Property} may have
+  \uml{AggregationKind} \uml{composite}.  However, such an aggregation
+  kind has no semantical meaning when the property is not a member end
+  of an association: the UML Superstructure Specification 2.4.1 does not
+  mention the aggregation kind in the description of the semantics of
+  \uml{Property}.  Moreover, composite properties, i.e., properties with
+  aggregation kind \uml{composite} can only be member ends of binary
+  associations (UML Superstructure Specification 2.4.1, p.~37) and their
+  multiplicity must not exceed one (UML Superstructure Specification
+  2.4.1, p.~126).  We thus separate composition declarations from
+  general association declarations.}  A composition declaration
+$\mathbf{m} = m(p_1 : \mathsf{Set}[c_1], \composition p_2 :
+\tau_2[c_2])$
+\emph{yields} the property declarations
+$\mathbf{m}.p_1 : \mathsf{Set}[c_1]$ and $\mathbf{m}.p_2 : \tau_2[c_2]$.
 \end{itemize}
-%
-such that the following properties are satisfied:
+
+\medskip\noindent\textbf{Class/data type nets (Signatures).}
+A \emph{class/data type net} $\Sigma = ((C, {\leq_C}), P, A, M)$
+comprises a class/data type hierarchy $(C, {\leq_C})$ and a set $P$ of
+property declarations, a set $A$ of association declarations over
+$(C, {\leq_C})$, and a set $M$ of composition declarations, such that
+the following properties are satisfied:
 %
 \begin{itemize}[label={--}, leftmargin=*]
-  \item instance specification names are unique: if $k_1 : c_1$ and
-$k_2 : c_2$ are different instance specification declarations in $K$,
-then $k_1 \neq k_2$;
-
-  \item property names are unique along the generalisation relation: if
+  \item attribute names are unique along the generalisation relation: if
 $c_1.p_1 : \tau_1[c_1']$ and $c_2.p_2 : \tau_2[c_2']$ are different
-property declararations in $P$ and $c_1 \leq c_2$, then $p_1 \neq p_2$;
+property declararations in $P$ and $c_1 \leq_C c_2$, then $p_1 \neq
+p_2$;
 
-  \item composition role names are unique along the generalisation
-relation: if $c_1\composition r_1 : \tau_1[c_1']$ and $c_2\composition r_2 :
-\tau_2[c_2']$ are different composition declararations in $M$ and $c_1 \leq
-c_2$, then $r_1 \neq r_2$;
+  \item association and composition names are unique: if $d_1$ and
+$d_2$ are the names of two different association or composition
+declarations in $M \cup A$, then $d_1 \neq d_2$;
 
-  \item property and composition role names are unique along the
-generalisation relation: if $c_1.p_1 : \tau_1[c_1']$ is a property
-declaration in $P$ and $c_2\composition r_2 : \tau_2[c_2']$ is a
-composition declaration in $M$ and $c_1 \leq_C c_2$, then
-$p_1 \neq r_2$; and if $c_1\composition r_1 : \tau_1[c_1']$ is a
-composition declaration in $M$ and $c_2.p_2 : \tau_2[c_2']$ is a
-property declaration in $P$ and $c_1 \leq_C c_2$, then $r_1 \neq p_2$;
+  \item member end names are unique: if $p_1, \ldots, p_r$ are the
+member end names of an association declaration in $A$ or a composition
+declaration in $M$, then $p_i \neq p_j$ for $1 \leq i \neq j \leq r$.
 
-  \item association role names are unique: if $a\{ r_1 : c_1, \dots,
-r_n : c_n \}$ is an association declaration in $A$ and $1 \leq i \neq
-j \leq n$, then $r_i \neq r_j$;
-
-  \item composition declarations are cycle-free: if
-$c_1\composition r_1 : \tau_2[c_2], \dots, c_n\composition r_n :
-\tau_{n+1}[c_{n+1}] \in M$, then $c_{n+1} \neq c_1$.
+  \item the type of a member end\footnote{All member ends are instances
+  of \uml{Property}; UML Superstructure Specification 2.4.1, p.~36.} owned by a class/data type coincides with its
+declarations as attribute: We say that a property declaration
+$\mathbf{a}.p_i : \tau_i[c_i]$ yielded by a binary association
+$\mathbf{a} = a(p_1 : \tau_1[c_1], p_2 : \tau_2[c_2])$ is \emph{owned
+  by} $c_0 \in C$ if $c_{2-i+1} \leq_C c_0$ and there is an attribute
+declaration $c_0.p_i : \tau_0[c_0'] \in P$; and similarly for property
+declarations yielded by composition declarations.  If a property
+declaration $\mathbf{d}.p : \tau[c']$ for $\mathbf{d} \in A \cup M$ is
+owned by $c_0 \in C$ with $c_0.p : \tau_0[c_0'] \in P$, then
+$\tau_0 = \tau$ and $c_0' = c'$.
 \end{itemize}
 
-A \emph{classifier net morphism}
-$\sigma = (\gamma, \kappa, \pi, \mu, \alpha) : \Sigma = ((C, {\leq}_C),
-K, P, M, A) \to \Tau = ((D, {\leq}_D),\allowbreak L,\allowbreak Q,\allowbreak N, B)$
+A \emph{class/data type net morphism}
+$\sigma = (\gamma, \pi, \alpha, \mu) : \Sigma = ((C, {\leq}_C),
+P, A, M) \to \Tau = ((D, {\leq}_D), Q,\allowbreak B, N)$
 is given by
 %
 \begin{itemize}[label={--}, leftmargin=*]
-  \item a classifier hierarchy map $\gamma : (C, {\leq_C}) \to (D,
+  \item a class/data type hierarchy map $\gamma : (C, {\leq_C}) \to (D,
 {\leq_D})$;
-
-  \item an instance specification map $\kappa : K \to L$ such
-that if $\kappa({k : c}) = {l : d} \in L$, then $d = \gamma(c)$;
 
   \item a property declaration map $\pi : P \to Q$ such that if
 $\pi({c.p : \tau[c']}) = {d.q : \tau'[d']} \in Q$, then $d = \gamma(c)$,
-$d' = \gamma(d')$, and $\tau = \tau'$;
-
-  \item a composition declaration map $\mu : M \to N$ such that if
-$\mu({c\composition r : \tau[c']}) = {d\composition s : \tau'[d']} \in M$, then $d =
-\gamma(c)$, $d' = \gamma(d')$, and $\tau = \tau'$;
+$d' = \gamma(c')$, and $\tau = \tau'$;
 
   \item an association declaration map $\alpha : A \to B$ such that if
-$\alpha(a\{ r_1 : \tau_1[c_1], \dots, r_n : \tau_n[c_n] \}) = b\{ s_1 :
-\tau_1'[d_1], \dots, s_m : \tau_m'[d_m] \} \in B$,
-then there is a bijective map
-$\rho : \{ r_1, \dots, r_n \} \to \{ s_1, \dots, s_m \}$ with
-$d_j = \gamma(c_i)$ and $\tau_j = \tau_i'$ if $\rho(r_i) = s_j$.
+$\alpha(a(p_1 : \tau_1[c_1], \dots, p_r : \tau_n[c_r])) = b(q_1 :
+\tau_1'[d_1], \dots, q_s : \tau_s'[d_s]) \in B$,
+then $r = s$ and $d_i = \gamma(c_i)$ and $\tau_i = \tau_i'$ for
+$1 \leq i \leq r$, and member ends owned by the association are mapped into owned member ends;
+
+  \item a composition declaration map $\mu : M \to N$ such that if
+$\mu(m(p_1 : \mathsf{Set}[c_1], \composition p_2 : \tau_2[c_2])) =
+n(q_1 : \mathsf{Set}[d_1], \composition q_2 : \tau_2'[d_2]) \in N$,
+then $d_1 = \gamma(c_1)$, $d_2 = \gamma(c_2)$, and $\tau_2 = \tau_2'$,
+and member ends owned by the composition are mapped into owned member
+ends.
 \end{itemize}
 
-Classifier nets as objects and classifier net morphisms as morphisms
-form the category of \emph{classifier nets}, denoted by
+Class/data type nets as objects and class/data type net morphisms as
+morphisms form the category of \emph{class/data type nets}, denoted by
 $\mathrm{Cl}$.
 
+\medskip
+For the example we have
+%
+\begin{gather*}
+  \text{Classes/data types: }\mathsf{Net}, \mathsf{Station}, \mathsf{Line}, \mathsf{Connector}, \mathsf{Unit}, \mathsf{Track}, \mathsf{Point}, \mathsf{Linear},
+\\[-.5ex]
+  \phantom{\text{Classes/data types: }}\mathsf{Boolean}, \mathsf{UnlimitedNatural}, \mathsf{Integer}, \mathsf{Real}, \mathsf{String}
+\\
+  \text{Generalisations: }\mathsf{Point} \leq \mathsf{Unit}, \mathsf{Linear} \leq \mathsf{Unit}
+\\
+  \text{Properties: }\mathsf{Line.linear : Set[Boolean]}, \mathsf{Track.linear : Set[Boolean]},
+\\[-.5ex]
+  \phantom{\text{Properties: }}\mathsf{Net.station : Set[Station]}, \mathsf{Net.line : Set[Line]},
+\\[-.5ex]
+  \phantom{\text{Properties: }}\mathsf{Station.net : Set[Net]}, \mathsf{Station.unit : Set[Unit]}, \mathsf{Station.track : Set[Track]},
+\\[-.5ex]
+  \phantom{\text{Properties: }}\mathsf{Line.net : Set[Net]}, \mathsf{Line.linear : Set[Linear]},
+\\[-.5ex]
+  \phantom{\text{Properties: }}\mathsf{Connector.unit : Set[Unit]},
+\\[-.5ex]
+  \phantom{\text{Properties: }}\mathsf{Unit.station : Set[Station]}, \mathsf{Unit.connector : Set[Connector]},
+\\[-.5ex]
+  \phantom{\text{Properties: }}\mathsf{Track.station : Set[Station]}, \mathsf{Track.linear : Set[Linear]},
+\\[-.5ex]
+  \phantom{\text{Properties: }}\mathsf{Linear.track : Set[Track]}, \mathsf{Linear.line : Set[Line]}
+\\
+  \text{Associations: }\mathsf{l2l(line : Set[Line], linear : Set[Linear])},
+\\[-.5ex]
+  \phantom{\text{Associations: }}\mathsf{l2t(linear : Set[Linear], track : Set[Track])},
+\\[-.5ex]
+  \phantom{\text{Associations: }}\mathsf{c2u(connector : Set[Connector], unit : Set[Unit])}
+\\
+  \text{Compositions: }\mathsf{n2s(net : Set[Net], \composition station : Set[Station])},
+\\[-.5ex]
+  \phantom{\text{Compositions: }}\mathsf{n2l(net : Set[Net], \composition line : Set[Line])},
+\\[-.5ex]
+  \phantom{\text{Compositions: }}\mathsf{s2u(station : Set[Station], \composition unit : Set[Unit])},
+\\[-.5ex]
+  \phantom{\text{Compositions: }}\mathsf{s2t(station : Set[Station], \composition track : Set[Track])}
+\end{gather*}
+
+Here all member ends are owned by class/data types.
+
+
 \begin{figure}[!tH]
-\centering
-\begin{tikzpicture}[transform shape,scale=.7]
+\begin{center}
+\vspace*{1ex}
+\begin{tikzpicture}[transform shape,scale=.8]
 \def\overallfont{\sffamily\fontsize{10pt}{10pt}\selectfont}
 \tikzset{every node/.style={font=\overallfont}}
 %\tikzset{tikzuml class style/.style={inner xsep=32pt}}
 \tikzumlset{font=\overallfont}
 \umlemptyclass{Net}
 \umlemptyclass[x=-2, y=-3]{Station}
-\umlclass[x=2, y=-3]{Line}{- linear : Boolean}{}
-\umlcompo[mult2=2..*, pos2=2.7, geometry=|-|]{Net}{Station}
-\umlcompo[mult1=1, pos1=0.3, mult2=*, pos2=2.7, geometry=|-|]{Net}{Line}
+\umlclass[x=2.5, y=-3]{Line}{linear : Boolean}{}
+\umlcompo[name=NetStation,mult2=2..*, pos2=2.7, geometry=|-|]{Net}{Station}
+\draw (NetStation-4) node[above] {n2s};
+\umlcompo[name=NetLine,mult1=1, pos1=0.3, mult2=*, pos2=2.7, geometry=|-|]{Net}{Line}
+\draw (NetLine-4) node[above] {n2l};
 \umlemptyclass[x=-4, y=-6]{Unit}
-\umlclass[x=0, y=-6]{Track}{- linear : Boolean}{}
-\umlcompo[mult2=*, pos2=2.7, geometry=|-|]{Station}{Unit}
-\umlcompo[mult1=1, pos1=0.3, mult2=*, pos2=2.7, geometry=|-|]{Station}{Track}
+\umlclass[x=0, y=-6]{Track}{linear : Boolean}{}
+\umlcompo[name=StationUnit,mult2=*, pos2=2.7, geometry=|-|]{Station}{Unit}
+\draw (StationUnit-4) node[above] {s2u};
+\umlcompo[name=StationTrack,mult1=1, pos1=0.3, mult2=*, pos2=2.7, geometry=|-|]{Station}{Track}
+\draw (StationTrack-4) node[above] {s2t};
 \umlemptyclass[x=-8, y=-6]{Connector}
 \umlassoc[name=ConnectorUnit, mult1=1..4, pos1=0, align1=left, mult2=1, pos2=1, align2=right]{Connector}{Unit}
-\draw (ConnectorUnit-middle) node[above] {has};
+\draw (ConnectorUnit-middle) node[above] {c2u};
 \umlemptyclass[x=-6, y=-9]{Point}
 \umlemptyclass[x=-2, y=-9]{Linear}
 \umlinherit[geometry=|-|]{Point}{Unit}
 \umlinherit[geometry=|-|]{Linear}{Unit}
 \umlassoc[name=LinearTrack, mult1=1..*, pos1=0, align1=left, anchor1=20, mult2=1, pos2=2, align2=left, geometry=-|]{Linear}{Track}
-\draw (LinearTrack-2) node[right] {has};
+\draw (LinearTrack-2) node[right] {l2t};
 \umlassoc[name=LinearLine, mult1=1..*, pos1=0, align1=left, anchor1=-20, mult2=1, pos2=2, align2=left, geometry=-|]{Linear}{Line}
-\draw (LinearLine-2) node[right] {has};
+\draw (LinearLine-2) node[right] {l2l};
 \end{tikzpicture}
+\end{center}
 \caption{Sample UML class diagram.}
 \label{fig:bjoerners_dsl}
 \end{figure}
@@ -6637,17 +6706,24 @@ the following grammar:
 %
 \begin{equation*}
 \begin{array}{@{}r@{\ }r@{\ }l@{}}
-  \mathit{Frm} & ::= & \mathit{NumLiteral}\ \mathsf{\leq}\ \mathit{FunExpr}\ |\ \mathit{FunExpr}\ \mathsf{\leq}\ \mathit{NumLiteral}\ |\ \mathit{Composition}\ \mathsf{!}
+  \mathit{Frm} & ::= & \mathit{NumLiteral}\ \mathsf{\leq}\ \mathit{FunExpr}\\
+               &   | & \mathit{FunExpr}\ \mathsf{\leq}\ \mathit{NumLiteral}
+\\[1ex]
+  \mathit{FunExpr} & ::= & \mathit{\#}\ \mathit{Attribute}\\
+                   &   | & \mathit{\#}\ \mathit{Assocation}\ \mathsf{.}\ \mathit{End}\\
+                   &   | & \mathit{\#}\ \mathit{Composition}\ \mathsf{.}\ \mathit{End}
+\\[1ex]
+  \mathit{Attribute} & ::= & \mathit{Classifier}\ \mathsf{.}\ \mathit{End} \mathsf{:} \mathit{Type}
 \\
-  \mathit{FunExpr} & ::= & \mathit{\#}\ \mathit{Composition}\ |\ \mathit{\#}\ \mathit{Association}\ \mathsf{[}\ \mathit{Role}\ (\mathsf{,}\ \mathit{Role})^*\ \mathsf{]}
+  \mathit{Association} & ::= & \mathit{Name}\ (\ \mathit{End} : \mathit{Type}(\ \mathsf{,}\ \mathit{End}\ \mathsf{:}\ \mathit{Type})^*\ )
 \\
-  \mathit{Composition} & ::= & \mathit{Classifier}\composition\mathit{Role}\ \mathsf{:}\ \mathit{Annot}\ [\ \mathit{Classifier}\ ]
-\\
-  \mathit{Association} & ::= & \mathit{Name}\{ \mathit{Role} : \mathit{Annot}\ [\ \mathit{Classifier}\ ](\mathsf{,}\ \mathit{Role}\ \mathsf{:}\ \mathit{Annot}\ [\ \mathit{Classifier}\ ])^* \}
+  \mathit{Composition} & ::= & \mathit{Name}\ (\ \mathit{End} : \mathsf{Set}\ [\ \mathit{Classifier}\ ]\mathsf{,}\ \composition \mathit{End}\ \mathsf{:}\ \mathit{Type}\ )
+\\[1ex]
+  \mathit{Type} & ::= & \mathit{Annot}\ \mathsf{[}\ \mathit{Classifier}\ \mathsf{]}
 \\
   \mathit{Classifier} & ::= & \mathit{Name}
 \\
-  \mathit{Role} & ::= & \mathit{Name}
+  \mathit{End} & ::= & \mathit{Name}
 \\
   \mathit{Annot} & ::= & \mathsf{OrderedSet} \mid \mathsf{Set} \mid \mathsf{Sequence} \mid \mathsf{Bag}
 \\
@@ -6658,48 +6734,48 @@ the following grammar:
 where $\mathit{Name}$ is a set of names.
 
 The set of $\Sigma$-\emph{multiplicity constraints}
-$\mathit{Mult}(\Sigma)$ for a classifier net $\Sigma$ is given by the
-multiplicity formulae in $\mathit{Frm}$ such that all mentioned
-elements of $\mathit{Composition}$ and $\mathit{Association}$ correspond
-to composition declarations and association declarations of $\Sigma$,
-respectively, and the role names mentioned in the last clause of
-$\mathit{FunExpr}$ occur in the mentioned association.  The
-\emph{translation} of a formula $\varphi \in \mathit{Mult}(\Sigma)$
-along a classifier net morphism $\sigma$, written as
-$\sigma(\varphi)$, is given by applying $\sigma$ to compositions,
-associations, and role names.
+$\mathit{Mult}(\Sigma)$ for a class/data type net $\Sigma$ is given by the
+multiplicity formulae in $\mathit{Frm}$ such that all mentioned elements
+of $\mathit{Association}$ and $\mathit{Composition}$ correspond to
+association declarations and composition declarations of $\Sigma$,
+respectively, and the member end name mentioned in the clauses of
+$\mathit{FunExpr}$ occur in the mentioned association and composition,
+respectively.
+
+The \emph{translation} of a formula $\varphi \in \mathit{Mult}(\Sigma)$
+along a class/data type net morphism $\sigma$, written as $\sigma(\varphi)$,
+is given by applying $\sigma$ to associations, compositions, and member end
+names.
 
 
 \begin{example}
-For the class diagram in Fig.~\ref{fig:bjoerners_dsl} we have
+For the example we have
 \begin{gather*}
-  \mathsf{2 \leq \#Net\composition station : Set[Station]}
+  \mathsf{2 \leq \#n2s(net : Set[Net], \composition station : Set[Station]).station}
 \\
-  \mathsf{Net\composition station : Set[Station]\,!}
+  \mathsf{\#n2s(net : Set[Net], \composition station : Set[Station]).net = 1}
 \\
-  \mathsf{Net\composition line : Set[Line]\,!}
+  \mathsf{\#n2l(net : Set[Net], \composition line : Set[Line]).net = 1}
 \\
-  \mathsf{Station\composition unit : Set[Unit]\,!}
+  \mathsf{\#s2u(station : Set[Station], \composition unit : Set[Unit]).station = 1}
 \\
-  \mathsf{Station\composition track : Set[Track]\,!}
+  \mathsf{\#s2t(station : Set[Station], \composition track : Set[Track]).station = 1}
 \\
-  \mathsf{1 \leq \#has\{ connector : Set[Connector], unit : Set[Unit] \}[unit]}
+  \mathsf{1 \leq \#c2u(connector : Set[Connector], unit : Set[Unit]).unit \leq 4}
 \\
-  \mathsf{\#has\{ connector : Set[Connector], unit : Set[Unit] \}[unit] \leq 4}
+  \mathsf{\#c2u(connector : Set[Connector], unit : Set[Unit]).connector = 1}
 \\
-  \mathsf{\#has\{ connector : Set[Connector], unit : Set[Unit] \}[connector] = 1}
+  \mathsf{1 \leq \#l2t(track : Set[Track], linear : Set[Linear]).track}
 \\
-  \mathsf{1 \leq \#has\{ track : Set[Track], linear : Set[Linear] \}[track]}
+  \mathsf{\#l2t(track : Set[Track], linear : Set[Linear]).linear = 1}
 \\
-  \mathsf{\#has\{ track : Set[Track], linear : Set[Linear] \}[linear] = 1}
+  \mathsf{1 \leq \#l2t(line : Set[Line], linear : Set[Linear]).line}
 \\
-  \mathsf{1 \leq \#has\{ line : Set[Line], linear : Set[Linear] \}[line]}
-\\
-  \mathsf{\#has\{ line : Set[Line], linear : Set[Linear] \}[linear] = 1}
+  \mathsf{\#l2l(line : Set[Line], linear : Set[Linear]).linear = 1}
 \end{gather*}
 %
-where we write ``$=$'' as an abbreviation for two inequations using
-``$\leq$''.
+where we write ``$=$'' and ``${-} \leq {-} \leq {-}$'' as respective
+abbreviations for two inequations using ``$\leq$''.
 \end{example}
 
 
@@ -6794,7 +6870,7 @@ $CL(\Sigma)$ consisting of:
 \item 
   $\CL(\mathsf{Real}) = \texttt{buml:Real}$,
 \item 
-  $\CL(\mathsf{c}) = c$, if $c$ is an enumeration type with values $k_1,\ldots,k_n$. Additionally, the Common Logic theory is augmented by
+  $\CL(\mathsf{c}) = c$, if $c$ is an enumeration type with values $k_1,\ldots,k_n$. In this case, additionally, the Common Logic theory is augmented by
 \texttt{(enumeration $c$ $k_1 \cdots k_n$)},\ednote{Ed Seidewitz:
 enumerations are specializable, but this is type-unsafe, so maybe omit it}
 \item 
@@ -6809,7 +6885,8 @@ enumerations are specializable, but this is type-unsafe, so maybe omit it}
 \item 
   $\CL(\mathsf{Bag}[c]) = ???$\ednote{UML has bags, but fUML appaerantly not. 
      Do we want to provide our own specification of bags in Common Logic?},
- 
+\item 
+  $\CL(\mathsf{c}) = c$, if $c$ a class name which is not one of the above. 
 \end{itemize}
 \item for each relation $c_1
   \leq_C c_2$, an axiom \texttt{(forall (x) (if (C1 x) (C2 x)))},
@@ -6834,6 +6911,7 @@ for each $i=1\ldots n$,\footnote{Note that the $\cdots$ here is meta notation, n
 \qqquad (if (and (c.p x $x_1$ $x_2$ $\cdots$  $x_n$ y) (member m y)) (c' m)))}
 \item 
 \texttt{(forall (x $x_1$ $x_2$ $\cdots$  $x_n$)}\\
+\ednote{precondition missing!}
 \qqquad \texttt{(exists (y) (c.p x $x_1$ $x_2$ $\cdots$  $x_n$ y)))}
 \item 
 \texttt{(forall (x $x_1$ $x_2$ $\cdots$  $x_n$ y z)}\\
@@ -6849,8 +6927,10 @@ a predicate $\CL(r)$ and axioms\\
 for any pair of composition declarations $c_1\composition r_1 : c_1'$
 and $c_2\composition r_2 : c_2'$, an axiom stating ``each instance has
 at most one owner'':\\
-\texttt{(forall ($x_1$ $x_2$ $y_1$ $y_2$) (if (and ($r_1$ $x_1$ $y_1$) ($r_2$ $x_2$ $y_2$))}\\
-\qqquad\texttt{(exists (z) (and (member z $x_1$) (member z $x_2$)))))}
+\red{\texttt{(forall ($x_1$ $x_2$ $y_1$ $y_2$)\\
+\qqquad (if (and ($r_1$ $x_1$ $y_1$) ($r_2$ $x_2$ $y_2$)}\\
+\qqquad\qqquad\texttt{(exists (z) (and (member z $y_1$) (member z $y_2$)))))}\\
+\qqquad\texttt{(= $x_1$ $x_2$)}}
   \item \CL maps each association declaration $a(r_1 : c_1, \dots, r_n : c_n)\in A$ to a predicate $\CL(a)$ and an axiom\\
 \texttt{(forall ($x_1$ $x_2$ $\cdots$  $x_n$) (if (a $x_1$ $x_2$ $\cdots$  $x_n$) (and ($c_1$ $x_1$) $\cdots$ ($c_n$ $x_n$)))))}\footnote{
 Ignoring the annotations $\tau_i$ in the interpretation of an
