cleaned up ordered sets

--- a/Standard/OMG_OntoIOp_current.tex
+++ b/Standard/OMG_OntoIOp_current.tex
@@ -6439,14 +6439,12 @@ We additionally need to axiomatize a number of predicates in Common Logic
 
 %% ordered sets
 then fuml:sequences.clif with
-  form:in-sequence |-> form:in-ordered-set,
-  form:Sequence |-> form:Ordered-Set,
-  form:before-in-sequence |-> form:before-in-ordered-set,
   form:Sequence |-> form:Ordered-Set,
   form:empty-sequence |-> form:empty-ordered-set,
-  form:in-sequence |-> form:in-ordered-set,
   form:sequence-length |-> form:ordered-set-size,
   form:same-sequence |-> form:same-ordered-set,
+  form:in-sequence |-> form:in-ordered-set,
+  form:before-in-sequence |-> form:before-in-ordered-set
 then
 //Different positions contain different elements
   (forall (s1 s2 x1 x2 n1 n2)
